# celeborn

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRACTS.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SKILL.md  celeborn.py  llms.txt  package-lock.json  package.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish-celeborn-tombstone.yml  publish-pypi.yml  release.yml
board/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json
board/app/: Board.tsx  BoardHeader.tsx  JiraPanel.tsx  RunDashboard.tsx  SavingsBar.tsx  TaskBoard.tsx  globals.css  layout.tsx  page.tsx
board/app/api/agents/: route.ts
board/app/api/jira/connect/: route.ts
board/app/api/jira/reconcile/: route.ts
board/app/api/jira/status/: route.ts
board/app/api/permissions/: route.ts
board/app/api/run/: route.ts
board/app/api/savings/: route.ts
board/app/api/skills/: route.ts
board/app/api/tasks/: route.ts
board/app/settings/: SettingsView.tsx  page.tsx
board/lib/: agents.ts  band.ts  cli.ts  poll.ts  run.ts  savings.ts  sort.ts  tasks.ts
codex/: CONTRACT.md  SKILL.md
codex/hooks/: celeborn.json
codex/scripts/: codex_celeborn.py  install.sh
elves/: CELEBORN-INTEGRATION.md  GRATITUDE.md  LICENSE  SKILL.md
elves/references/: autonomy-guide.md  codex-goals.md  elves-report-template.html  execution-log-template.md  kickoff-prompt-template.md  learnings-template.md  open-ended-guide.md  plan-template.md  review-subagent.md  survival-guide-template.md  tool-config-examples.md  validation-guide.md  verification-patterns.md
elves/scripts/: install_doctor.py  notify.sh  preflight.sh  validate_survival_guide.py
examples/sample-.context/: .celebornrc  handoff.md  journal.md  learnings.md  metrics.json  session.json  state.md
examples/sample-.context/durable/: conventions.md
grok/: SKILL.md
grok/hooks/: celeborn.json
grok/scripts/: grok_celeborn.py  install.sh
hooks/: README.md  capture.sh  context-watch.sh  pre-compact.sh  session-end.sh  session-start.sh  settings.snippet.json  statusline.sh
packaging/: README.md  build-binary.ps1  build-binary.sh  celeborn.spec
packaging/homebrew/: celeborn.rb
packaging/pypi-tombstone/: README.md  pyproject.toml
packaging/scoop/: celeborn.json
packaging/winget/: ThotTechnologies.Celeborn.installer.yaml  ThotTechnologies.Celeborn.locale.en-US.yaml
references/: __init__.py  card-assignment.md  cmm-pin.json  cmm-upstream.md  context-optimizer.md  executable-app.md  freemium-billing.md  github-app-listing.md  github-app-manifest.json  infisical-pin.json  memory-protocol.md  metrics.md  multi-agent-bus.md  multi-agent-editing.md  positioning.md  product-federation.md  pypi-publishing.md  rehydration.md  reminders.md  schema.sql  setup-onboarding-plan.md  supabase-auth-setup.md  supabase-setup.md  sync-design.md  tiers.md  weave-contract.md  weave-pin.json
references/templates/: celebornrc  decisions.md  handoff.md  journal.md  learnings.md  notes.md  session.json  state.md
references/templates/durable/: manifest.md
scripts/: celeborn.py  celeborn_cmm.py  celeborn_cmm_provision.py  celeborn_config.py  celeborn_github.py  celeborn_jira.py  celeborn_secrets.py  celeborn_sync.py  stripe_bootstrap.sh
tests/: test_celeborn.py  test_celeborn_config.py  test_codex_celeborn.py  test_github_mirror.py  test_grok_celeborn.py  test_jira_autopush.py  test_jira_reconcile.py
