[build-system]
requires = ["setuptools>=77"]  # >=77 for PEP 639 SPDX license expression (license = "BUSL-1.1")
build-backend = "setuptools.build_meta"

[project]
name = "celeborn"
version = "0.1.1"
description = "A long-term context substrate for coding agents."
readme = "README.md"
# Source-available under the Business Source License 1.1 (SPDX: BUSL-1.1). Converts to Apache-2.0
# four years after each version's release. Full terms + Additional Use Grant in the LICENSE file.
license = "BUSL-1.1"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{ name = "Cloud Dancer" }]
maintainers = [{ name = "Thot Technologies LLC" }]
keywords = ["llm", "agents", "memory", "context", "claude", "coding-agents"]
classifiers = [
    # NOTE: No "License ::" trove classifier here — PEP 639 forbids pairing a License-Expression
    # (the `license = "BUSL-1.1"` above) with a License classifier. PyPI renders BUSL-1.1 from the
    # SPDX expression. ("Private :: Do Not Upload" is also intentionally absent — it makes PyPI
    # REJECT the upload.) See references/pypi-publishing.md.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = []  # stdlib only (argparse, sqlite3, json, pathlib) — "boring technology"

[project.urls]
Homepage = "https://github.com/cloud-dancer-labs/celeborn"
Repository = "https://github.com/cloud-dancer-labs/celeborn"
Issues = "https://github.com/cloud-dancer-labs/celeborn/issues"

[project.scripts]
celeborn = "celeborn:main"
cel = "celeborn:main"

[tool.setuptools]
# The CLI stays two flat modules under scripts/ (single-file ethos preserved). Runtime data
# (schema.sql + init templates) lives in references/ and ships as the data-only `celeborn_refs`
# package so wheels/uv-tool installs carry it; celeborn.py resolves it via importlib.resources.
package-dir = { "" = "scripts", "celeborn_refs" = "references" }
py-modules = ["celeborn", "celeborn_sync"]
packages = ["celeborn_refs"]

[tool.setuptools.package-data]
celeborn_refs = ["*.sql", "*.md", "*.json", "templates/*", "templates/**/*"]
