[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

# Tombstone for the OLD PyPI project `celeborn` (CELE-t460). The product renamed to
# `celeborn-code`; PyPI has no edit-description API, so this one final metadata-only
# release is the only way to put a "renamed" pointer on the old project page. It ships
# no code — just a README and a dependency on celeborn-code, so a stale
# `pip install celeborn` still lands the real CLI.
[project]
name = "celeborn"
version = "0.2.2"
description = "RENAMED: this project is now celeborn-code — install celeborn-code instead. This release is a redirect stub that depends on celeborn-code."
readme = "README.md"
license = "BUSL-1.1"
requires-python = ">=3.9"
authors = [{ name = "Cloud Dancer" }]
maintainers = [{ name = "Thot Technologies LLC" }]
dependencies = ["celeborn-code"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://celeborncode.ai"
"Renamed to" = "https://pypi.org/project/celeborn-code/"
Repository = "https://github.com/cloud-dancer-labs/celeborn-code"

[tool.setuptools]
# Metadata-only: the wheel carries the README pointer and the celeborn-code dependency, nothing else.
py-modules = []
